# AIDD-30-days-challenge

./: task-01.md  task-02.md
specs/001-calculator/: spec.md  tasks.md
specs/001-calculator/checklists/: requirements.md
task-01/: README.md
task-02/: task-02.md
task-03/: task-03.md
task-04/: README.md
task-04/pdf_summarizer/: GEMINI.md  main.py  pdf_utils.py  requirements.txt
task-04/study-notes-agent/: .env  .gitignore  agent.py  app.py  gemini.md  pyproject.toml
task-04/study-notes-agent/study_notes_agent/: app.py  tools.py
task-04/study-notes-agent/study_notes_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task-04/study-notes-agent/study_notes_openai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task-05/: README.md  task-05.md
task-06/: README.md  task-06.md
task-07/: README.md
task-08/calculator/: .flake8  .gitignore  README.md  pyproject.toml
task-08/calculator/.specify/memory/: constitution.md
task-08/calculator/history/prompts/001-calculator/: 0002-calculator-feature-specification-draft.spec.prompt.md  0003-calculator-task-list-generation.tasks.prompt.md
task-08/calculator/history/prompts/constitution/: 0001-simple-calculator-constitution-initial-draft.constitution.prompt.md
task-08/calculator/src/: calculator.py
task-08/calculator/tests/: test_calculator.py
task-09/: README.md
task-10/: README.md
task-10/.claude/agents/: startup_planner.md
task-10/.claude/skills/blog-planner/: SKILL.md
